{
    "name": "GameInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "6e6c5837-ea84-403e-86ad-a33f8f656765",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "e69ad7dc-acd8-458f-8357-c42925f7f6f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputAxis",
                    "type": "Value",
                    "id": "2434535e-39ec-4bd6-b0a0-b276b73f4cd1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "94d12ed5-6d04-4456-a19a-9c03a57a36e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "1f28b54f-cae4-4066-959c-f383f5f44417",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3cd5193b-b8d7-44bb-b770-fe35fbfa1a72",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d1122940-010a-4ea6-aff4-896c91719a3d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "23f32659-7c50-4f55-8e5f-3da788459979",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9ae2a777-32ed-4a4f-a8b9-f55800b21d73",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}